PCS BAckup 26Dec2023/Backup-Source/objects/GCP_SFDC_Direct_Sales__c.object
<CustomObject>
    <fields>
        <fullName>External_Date__c</fullName>
        <formula>DATE(VALUE(RIGHT(Vision_Month__c,4)),VALUE(LEFT(Vision_Month__c,2)),01)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GCP_Product_Family__c</fullName>
        <label>GCP Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCP_Update_Date__c</fullName>
        <label>GCP Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>GCP SFDC Direct Sales</relationshipLabel>
        <relationshipName>GCP_SFDC_Direct_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Accounting_Document__c</fullName>
        <label>Accounting Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Acct_Reference__c</fullName>
        <label>Acct Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Agreement_Description__c</fullName>
        <label>Agreement Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Agreement_No__c</fullName>
        <label>Agreement No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Billed_Price__c</fullName>
        <label>Billed Price</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Billing_Date__c</fullName>
        <label>Billing Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Billing_IP_Document__c</fullName>
        <label>Billing IP Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Billing_Item_No__c</fullName>
        <label>Billing Item No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Billing_Type__c</fullName>
        <label>Billing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipLabel>GCP SFDC Direct Sales</relationshipLabel>
        <relationshipName>GCP_SFDC_Direct_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Created_On__c</fullName>
        <label>Created On</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Group_1__c</fullName>
        <label>Customer Group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Hierarchy_Name__c</fullName>
        <label>Customer Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Hierarchy__c</fullName>
        <label>Customer Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Recipient_Name__c</fullName>
        <label>Customer Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Direct_Rebates_Dollar__c</fullName>
        <label>Direct Rebates Dollar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Division__c</fullName>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Gross_Dollar__c</fullName>
        <label>Gross Dollar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Is_Internal_Batch_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is used in handleLookupsFuncBatchCls. Using this field we are escaping already processed records from batch process</description>
        <label>Is Internal Batch Processed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Month_Text__c</fullName>
        <label>Month Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Month__c</fullName>
        <label>Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Net_Direct_Rebates_BillBack_ZV87__c</fullName>
        <label>Net Direct Rebates BillBack ZV87</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Net_Dollar__c</fullName>
        <label>Net Dollar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_CR_Type__c</fullName>
        <label>Order CR Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Created_By__c</fullName>
        <label>Order Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Created_Name__c</fullName>
        <label>Order Created Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Reason_Code__c</fullName>
        <label>Order Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Reason__c</fullName>
        <label>Order Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_PO_CR_Reference_Number__c</fullName>
        <label>PO CR Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Package_Size__c</fullName>
        <label>Package Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Posting_Month__c</fullName>
        <label>Posting Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Pricing_Date__c</fullName>
        <label>Pricing Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Vision Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>GCP SFDC Direct Sales</relationshipLabel>
        <relationshipName>GCP_SFDC_Direct_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Profic_Center__c</fullName>
        <label>Profic Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Quantity__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Quantity_in_Units__c</fullName>
        <label>Quantity in Units</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_SAP_Material__c</fullName>
        <description>Storing to SKU Code</description>
        <label>SAP Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sales_CR_Doc_Item__c</fullName>
        <label>Sales CR Doc Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sales_CR_Doc__c</fullName>
        <label>Sales CR Doc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Settlement_Doc_CC__c</fullName>
        <label>Settlement Doc CC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Settlement_Doc_No__c</fullName>
        <label>Settlement Doc No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Settlement_Doc_Year__c</fullName>
        <label>Settlement Doc Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Shelf_Life_Exp_Date__c</fullName>
        <label>Shelf Life Exp Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_To_Customer__c</fullName>
        <label>Ship To Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_to_State__c</fullName>
        <label>Ship to State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sold_to_Rebate_Recipient__c</fullName>
        <label>Sold to Rebate Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Updated_Date__c</fullName>
        <label>Vision Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_ZWAC__c</fullName>
        <label>ZWAC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GCP SFDC Direct Sales</label>
    <nameField>
        <displayFormat>sfdc-direct-sales-{0000000}</displayFormat>
        <label>SFDC Direct Sales Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GCP SFDC Direct Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>